{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 64,
  "lineage": "0012a963-0600-b3d0-2d26-ecfc9d5fd741",
  "resources": [
    {
      "module": "module.ecs_app",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:840577818863:targetgroup/signalfind-dev-tg/32da633b2dc8c6d0",
            "arn_suffix": "targetgroup/signalfind-dev-tg/32da633b2dc8c6d0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:840577818863:targetgroup/signalfind-dev-tg/32da633b2dc8c6d0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "signalfind-dev-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04fd92d1ba13a0098"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:840577818863:targetgroup/signalfind-dev-tg/32da633b2dc8c6d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:840577818863:security-group/sg-04fa4fc4fb5030597",
            "description": "Allow HTTP traffic from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fa4fc4fb5030597",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "signalfind-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "840577818863",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04fd92d1ba13a0098"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "840577818863",
            "id": "sg-04fa4fc4fb5030597",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "svc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:840577818863:security-group/sg-001a314bdf9efab08",
            "description": "Allow ALB to ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001a314bdf9efab08",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04fa4fc4fb5030597"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "signalfind-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "840577818863",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04fd92d1ba13a0098"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "840577818863",
            "id": "sg-001a314bdf9efab08",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.ecs_app.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c8e4aed5904c8ac1",
            "arn": "arn:aws:ec2:ap-southeast-2:840577818863:elastic-ip/eipalloc-0c8e4aed5904c8ac1",
            "association_id": "eipassoc-02ecb94c0be9eeb76",
            "domain": "vpc",
            "id": "eipalloc-0c8e4aed5904c8ac1",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-02bf20ebc6562baad",
            "private_dns": "ip-10-0-2-115.ap-southeast-2.compute.internal",
            "private_ip": "10.0.2.115",
            "public_dns": "ec2-3-24-65-179.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.24.65.179",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "signalfind-dev-nat-0"
            },
            "tags_all": {
              "Name": "signalfind-dev-nat-0"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3e6b52fdb113513",
            "arn": "arn:aws:ec2:ap-southeast-2:840577818863:elastic-ip/eipalloc-0d3e6b52fdb113513",
            "association_id": "eipassoc-0706d63da12e61e91",
            "domain": "vpc",
            "id": "eipalloc-0d3e6b52fdb113513",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0608e2d439288cc4e",
            "private_dns": "ip-10-0-27-155.ap-southeast-2.compute.internal",
            "private_ip": "10.0.27.155",
            "public_dns": "ec2-3-105-181-130.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.105.181.130",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "signalfind-dev-nat-1"
            },
            "tags_all": {
              "Name": "signalfind-dev-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:840577818863:internet-gateway/igw-04d3136d6bdaeb1d6",
            "id": "igw-04d3136d6bdaeb1d6",
            "owner_id": "840577818863",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "signalfind-dev-igw"
            },
            "tags_all": {
              "Name": "signalfind-dev-igw"
            },
            "vpc_id": "vpc-04fd92d1ba13a0098"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c8e4aed5904c8ac1",
            "association_id": "eipassoc-02ecb94c0be9eeb76",
            "connectivity_type": "public",
            "id": "nat-070b9a3e2cb899b85",
            "network_interface_id": "eni-02bf20ebc6562baad",
            "private_ip": "10.0.2.115",
            "public_ip": "3.24.65.179",
            "region": "ap-southeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a835b425921a7d28",
            "tags": {
              "Name": "signalfind-dev-nat-0"
            },
            "tags_all": {
              "Name": "signalfind-dev-nat-0"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3e6b52fdb113513",
            "association_id": "eipassoc-0706d63da12e61e91",
            "connectivity_type": "public",
            "id": "nat-0853ecaa641453095",
            "network_interface_id": "eni-0608e2d439288cc4e",
            "private_ip": "10.0.27.155",
            "public_ip": "3.105.181.130",
            "region": "ap-southeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08369adb067e37bf8",
            "tags": {
              "Name": "signalfind-dev-nat-1"
            },
            "tags_all": {
              "Name": "signalfind-dev-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:840577818863:route-table/rtb-0f7a2d05881f8b69c",
            "id": "rtb-0f7a2d05881f8b69c",
            "owner_id": "840577818863",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-070b9a3e2cb899b85",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04fd92d1ba13a0098"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "840577818863",
            "id": "rtb-0f7a2d05881f8b69c",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:840577818863:route-table/rtb-07b10ea8e0d13e1a1",
            "id": "rtb-07b10ea8e0d13e1a1",
            "owner_id": "840577818863",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0853ecaa641453095",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04fd92d1ba13a0098"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "840577818863",
            "id": "rtb-07b10ea8e0d13e1a1",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:840577818863:route-table/rtb-0aa44e94d1089dc7d",
            "id": "rtb-0aa44e94d1089dc7d",
            "owner_id": "840577818863",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d3136d6bdaeb1d6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04fd92d1ba13a0098"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "840577818863",
            "id": "rtb-0aa44e94d1089dc7d",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064f62abd6dc6deb9",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0f7a2d05881f8b69c",
            "subnet_id": "subnet-0cbd761c3865f05f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4d9051bb6815e04",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-07b10ea8e0d13e1a1",
            "subnet_id": "subnet-0a4ea6e2fcdc3f4fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e2f6d2192beed0b",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0aa44e94d1089dc7d",
            "subnet_id": "subnet-0a835b425921a7d28"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d2ba4f28dbb34cb",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0aa44e94d1089dc7d",
            "subnet_id": "subnet-08369adb067e37bf8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:840577818863:subnet/subnet-0cbd761c3865f05f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbd761c3865f05f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840577818863",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "signalfind-dev-private-0"
            },
            "tags_all": {
              "Name": "signalfind-dev-private-0"
            },
            "vpc_id": "vpc-04fd92d1ba13a0098"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "840577818863",
            "id": "subnet-0cbd761c3865f05f7",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:840577818863:subnet/subnet-0a4ea6e2fcdc3f4fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4ea6e2fcdc3f4fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840577818863",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "signalfind-dev-private-1"
            },
            "tags_all": {
              "Name": "signalfind-dev-private-1"
            },
            "vpc_id": "vpc-04fd92d1ba13a0098"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "840577818863",
            "id": "subnet-0a4ea6e2fcdc3f4fc",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:840577818863:subnet/subnet-0a835b425921a7d28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a835b425921a7d28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "840577818863",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "signalfind-dev-public-0"
            },
            "tags_all": {
              "Name": "signalfind-dev-public-0"
            },
            "vpc_id": "vpc-04fd92d1ba13a0098"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "840577818863",
            "id": "subnet-0a835b425921a7d28",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:840577818863:subnet/subnet-08369adb067e37bf8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08369adb067e37bf8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "840577818863",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "signalfind-dev-public-1"
            },
            "tags_all": {
              "Name": "signalfind-dev-public-1"
            },
            "vpc_id": "vpc-04fd92d1ba13a0098"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "840577818863",
            "id": "subnet-08369adb067e37bf8",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:840577818863:vpc/vpc-04fd92d1ba13a0098",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bf6e2672065c71b2",
            "default_route_table_id": "rtb-0251915d9f2007dee",
            "default_security_group_id": "sg-057bac12321fa4491",
            "dhcp_options_id": "dopt-006b089fbf63b162b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04fd92d1ba13a0098",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0251915d9f2007dee",
            "owner_id": "840577818863",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "signalfind-dev-vpc"
            },
            "tags_all": {
              "Name": "signalfind-dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "840577818863",
            "id": "vpc-04fd92d1ba13a0098",
            "region": "ap-southeast-2"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:840577818863:vpc-endpoint/vpce-03cf3fb911e915701",
            "cidr_blocks": [
              "3.5.164.0/22",
              "16.12.74.0/24",
              "3.5.168.0/23",
              "52.95.128.0/21"
            ],
            "id": "vpce-03cf3fb911e915701",
            "owner_id": "840577818863",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ca54005",
            "private_dns_enabled": false,
            "region": "ap-southeast-2",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0f7a2d05881f8b69c"
            ],
            "service_name": "com.amazonaws.ap-southeast-2.s3",
            "service_region": "ap-southeast-2",
            "state": "available",
            "tags": {
              "Name": "signalfind-dev-s3-endpoint"
            },
            "tags_all": {
              "Name": "signalfind-dev-s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-04fd92d1ba13a0098"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "840577818863",
            "id": "vpce-03cf3fb911e915701",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}